# media-agent

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/skills/copilot/: SKILL.md
.github/workflows/: text-format-check.yml
cmake/: CheckDmaEnv.cmake  FindAlgoLib.cmake  FindMPP.cmake  FindRGA.cmake
config/: config.json
docker/: Dockerfile  docker-compose.yml
docs/: eventedge-e2e-full-guide.md  metadata-over-sei-protocol.txt  sei-compact-payload-v2.md  tracking-test-guide.md
package/debian/: changelog  control  copyright  media-agent.install  media-agent.postinst  media-agent.postrm  media-agent.preinst  media-agent.prerm  media-agent.service  rules
scripts/: build.sh  check_text_format.py  docker_build.sh  package_deb.sh  setup_udev_dma_heap.sh
skills/: SKILL.md  TODO.md
skills/modules/: algorithm.md  ipc.md  pipeline.md  protocol-config.md  rtsp.md
src/: CMakeLists.txt  main.cpp  version.h
src/common/: CmdArgs.cpp  CmdArgs.h  Config.cpp  Config.h  DmaImage.h  Logger.h  Statistics.cpp  Statistics.h  ThreadSafeQueue.h  Time.h  Utils.h  Uuid.h
src/detector/: AlgoDetector.cpp  AlgoDetector.h  AlgoDetectorWorkflow.cpp  AlgoDetectorWorkflow.h  DetectorFactory.h  IDetector.h
src/event/: EventEdgeJudge.cpp  EventEdgeJudge.h  EventFactory.cpp  EventFactory.h  IEventJudge.h
src/ipc/: IpcClient.cpp  IpcClient.h  SocketSender.cpp  SocketSender.h
src/pipeline/: ConfigFilter.cpp  ConfigFilter.h  InferScheduler.cpp  InferScheduler.h  Pipeline.cpp  Pipeline.h  StreamBuffer.cpp  StreamBuffer.h  StreamTypes.h  Utils.cpp  Utils.h
src/protocol/: MessageMapper.cpp  MessageMapper.h
src/stream/: MppDecoder.cpp  MppDecoder.h  MppEncoder.cpp  MppEncoder.h  RTSPPuller.cpp  RTSPPuller.h  Recorder.cpp  Recorder.h  RgaConverter.cpp  RgaConverter.h  RtspPublisher.cpp  RtspPublisher.h  SeiInjector.cpp  SeiInjector.h  Snapshotter.cpp  Snapshotter.h  Utils.cpp  Utils.h
src/tracker/: ByteTrackTracker.cpp  ByteTrackTracker.h  CMakeLists.txt  ITracker.h  TrackerFactory.h
tools/testing/: generate_proto_py.sh  offline_tracking_ipc_server.py  start_offline_rtsp_source.sh
