cmake_minimum_required(VERSION 3.16)
project(media_agent VERSION 1.0.0 LANGUAGES CXX)

# в”Җв”Җ C++ ж ҮеҮҶ в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# в”Җв”Җ зј–иҜ‘йҖүйЎ№ в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type")
set(CMAKE_CXX_FLAGS_RELEASE "-O2 -DNDEBUG")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fPIC")

# в”Җв”Җ иҫ“еҮәзӣ®еҪ• в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# в”Җв”Җ иҝҗиЎҢ DMA зҺҜеўғжқғйҷҗжЈҖжөӢв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
include(${CMAKE_SOURCE_DIR}/cmake/CheckDmaEnv.cmake)

# в”Җв”Җ жһ„е»әж—¶е°Ҷ config зӣ®еҪ•еӨҚеҲ¶еҲ° bin/ в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
file(COPY ${CMAKE_SOURCE_DIR}/config DESTINATION ${CMAKE_BINARY_DIR}/bin)

# в”Җв”Җ иҮӘе®ҡд№ү cmake жЁЎеқ—и·Ҝеҫ„ в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

# в”Җв”Җ з¬¬дёүж–№пјҡFFmpegпјҲд»…з”ЁдәҺ RTSP demuxпјҢи§Јз Ғз”ұ MPP жүҝжӢ…пјүв”Җв”Җ
find_package(PkgConfig REQUIRED)
pkg_check_modules(FFMPEG REQUIRED
    libavformat
    libavcodec
    libavutil
    libswscale
)

# в”Җв”Җ з¬¬дёүж–№пјҡRockchip MPPпјҲзЎ¬д»¶и§Ҷйў‘и§Јз Ғпјүв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
find_package(MPP REQUIRED)

set(EDGE_INFER_ROOT ${CMAKE_SOURCE_DIR}/third_party/edgeInfer)
set(EDGE_INFER_INCLUDE_DIR ${EDGE_INFER_ROOT}/include)
find_library(EDGE_INFER_LIBRARY
    NAMES edgeDeploy
    PATHS ${EDGE_INFER_ROOT}/lib
)
if(NOT EDGE_INFER_LIBRARY)
    find_library(EDGE_INFER_LIBRARY NAMES edgeDeploy)
endif()

if(NOT EDGE_INFER_LIBRARY)
    message(FATAL_ERROR "EdgeDeploy library NOT found: libedgeDeploy.so is required")
endif()
message(STATUS "EdgeDeploy found: ${EDGE_INFER_LIBRARY}")

# в”Җв”Җ з¬¬дёүж–№пјҡProtobufпјҲз»“жһ„еҢ–ж¶ҲжҒҜеәҸеҲ—еҢ–пјүв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
find_package(Protobuf REQUIRED)

# в”Җв”Җ з¬¬дёүж–№пјҡз®—жі•еә“пјҲеҸҜйҖүпјҢжҺҘеҸЈеҫ…е®ҡпјүв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
# еҪ“ third_party/algo_lib жҲ– ALGO_LIB_ROOT еӯҳеңЁж—¶иҮӘеҠЁеҗҜз”Ё
find_package(AlgoLib QUIET)
if(AlgoLib_FOUND)
    message(STATUS "AlgoLib found: ${ALGO_LIB_LIBRARY}")
    add_compile_definitions(HAVE_ALGO_LIB)
else()
    message(STATUS "AlgoLib NOT found, detector runs in stub mode")
endif()

# в”Җв”Җ з¬¬дёүж–№пјҡnlohmann/jsonпјҲheader-onlyпјҢжәҗз ҒеңЁ third_partyпјүв”Җ
add_library(nlohmann_json INTERFACE)
target_include_directories(nlohmann_json INTERFACE
    ${CMAKE_SOURCE_DIR}/third_party/json/include
)
add_library(nlohmann_json::nlohmann_json ALIAS nlohmann_json)

# в”Җв”Җ з¬¬дёүж–№пјҡspdlogпјҲheader-onlyпјҢжәҗз ҒеңЁ third_partyпјүв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
add_library(spdlog INTERFACE)
target_include_directories(spdlog INTERFACE
    ${CMAKE_SOURCE_DIR}/third_party/spdlog/include
)
# дёҚе®ҡд№ү SPDLOG_COMPILED_LIB вҶ’ иҮӘеҠЁдҪҝз”Ё header-only жЁЎејҸ
add_library(spdlog::spdlog ALIAS spdlog)

# в”Җв”Җ Proto зј–иҜ‘ в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
set(PROTO_SRC_DIR  ${CMAKE_SOURCE_DIR}/third_party/protocol/protobufs/media-agent)
# protobuf_generate_cpp е°Ҷж–Үд»¶иҫ“еҮәеҲ° CMAKE_CURRENT_BINARY_DIRпјҲеҚі CMAKE_BINARY_DIRпјү

file(GLOB PROTO_FILES "${PROTO_SRC_DIR}/*.proto")
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})

# е°Ҷз”ҹжҲҗзҡ„ proto жәҗж–Үд»¶е°ҒиЈ…дёә OBJECT еә“пјҢзЎ®дҝқ GENERATED еұһжҖ§еңЁжӯЈзЎ®зҡ„зӣ®еҪ•дҪңз”Ёеҹҹз”ҹж•Ҳ
# жіЁж„Ҹпјҡprotobuf_generate_cpp е°Ҷж–Үд»¶иҫ“еҮәеҲ° CMAKE_CURRENT_BINARY_DIRпјҲеҚі CMAKE_BINARY_DIRпјүпјҢ
#       иҖҢйқһ PROTO_GEN_DIRпјҢеӣ жӯӨ include и·Ҝеҫ„еҝ…йЎ»з”Ё CMAKE_BINARY_DIR
add_library(proto_objects OBJECT ${PROTO_SRCS} ${PROTO_HDRS})
target_include_directories(proto_objects PUBLIC
    ${CMAKE_BINARY_DIR}
    ${Protobuf_INCLUDE_DIRS}
)

# в”Җв”Җ еӯҗжЁЎеқ— в”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җв”Җ
add_subdirectory(src)

